# StatMan-BE

./: README.md  db.sqlite3  manage.py  pyproject.toml
Basketball/: apps.py
StatMan/: .env.sample  asgi.py  settings.py  urls.py  wsgi.py
auth0authorization/: utils.py  views.py
