[tool.poetry]
name = "statman-be"
version = "0.1.0"
description = ""
authors = ["Joseph Nguyen <josephnguyen2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
djangorestframework = "^3.13.1"
whitenoise = "^5.3.0"
django-cors-headers = "^3.11.0"
gunicorn = "^20.1.0"
django-environ = "^0.8.1"
psycopg2 = "^2.9.3"
cryptography = "^36.0.1"
drf-jwt = "^1.19.2"
PyJWT = "^2.3.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
